test/files/neg/t9361.check
t9361.scala:4: error: type mismatch;
 found   : Tc[_$2] where type _$2
 required: Nothing[]
    new Foo { def tc = null.asInstanceOf[Tc[_]] }
                                        ^
t9361.scala:4: error: type mismatch;
 found   : Foo[Nothing]
 required: Foo[Tc]{type T = Nothing}
    new Foo { def tc = null.asInstanceOf[Tc[_]] }
    ^
two errors found
